--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="input-el" placeholder="enter the wesite or paste the url here">
-    <button id="input-btn">SAVE INPUT</button>
+    <div class="input">
+        <input type="text" id="input-el" placeholder="enter the wesite or paste the url here">
+        <button id="input-btn">SAVE INPUT</button>
+        <button id="dlt-btn">Delete All</button>
+    </div>
     <ul id="ulel"></ul>
     <script src="index.js"></script>
 </body>
