created new butons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="input">
+    <div class="input"> 
         <input type="text" id="input-el" placeholder="enter the wesite or paste the url here">
-        <button id="input-btn">SAVE INPUT</button>
+        <button id="input-btn">Save Input</button>
+        <button id="tab-btn">Save Tab</button>
         <button id="dlt-btn">Delete All</button>
     </div>
     <ul id="ulel"></ul>
