css and html updated

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
     <div class="input"> 
         <input type="text" id="input-el" placeholder="enter the wesite or paste the url here">
-        <button id="input-btn">Save Input</button>
-        <button id="tab-btn">Save Tab</button>
-        <button id="dlt-btn">Delete All</button>
+        <button  class="btn btn-primary" id="input-btn">Save Input</button>
+        <button class="btn btn-primary" id="tab-btn">Save Tab</button>
+        <button class="btn btn-primary" id="dlt-btn">Delete All</button>
     </div>
-    <ul id="ulel"></ul>
+    <div id="list">
+        <h2 id="h">List Of Leads </h2>
+        <ul id="ulel"></ul>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
